# crawl_licitatie

./: .gitignore  README.md  notices.db  pyproject.toml
crawl_licitatie/: notices.db  scrapy.cfg
crawl_licitatie/crawl_licitatie/: items.py  middlewares.py  pipelines.py  settings.py
crawl_licitatie/crawl_licitatie/spiders/: api_spider.py
crawl_licitatie/model/: notices.db  notices.py
model/: notices.py
tests/: test_crawl_licitatie.py
