[tool.poetry]
name = "crawl_licitatie"
version = "0.1.0"
description = ""
authors = ["Simeon Martev <simeon.martev@adata.pro>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"
scrapy-jsonschema = "^0.5.0"
peewee = "^3.14.10"
dateparser = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.3.0"
black = {version = "^22.3.0", allow-prereleases = true}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
